apps-old/home-assistant/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
        app.kubernetes.io/name: home-assistant
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:2025.10.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8123
          name: home-assistant
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        livenessProbe:
          tcpSocket:
            port: 8123
        volumeMounts:
          - name: home-assistant-config
            mountPath: /config
          - name: home-assistant-time
            mountPath: /etc/localtime
            readOnly: true
      volumes:
      - name: home-assistant-time
        persistentVolumeClaim:
          claimName: home-assistant-time
      - name: home-assistant-config
        persistentVolumeClaim:
          claimName: home-assistant-config
